# pySAGE

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .sagelint.template  CONTRIBUTING.md  CONVENTIONS.md  README.md  intro.md  pyproject.toml
.github/workflows/: ci.yml
docs/: cookbook.md  merge.md
examples/sage_ini/: build_gondor_fighter_horde.py  duel.py  duel_realtime.py  rank_levels.py
examples/sage_map/: blend_tile.py  fix_blends.py  scale_map.py  texture_replacer.py
examples/sage_w3d/: view_model.py
sage_apt/: PLAN.md  README.md  TODO.md  __init__.py  __main__.py  actions.py  aptfile.py  check.py  editor.py  flags.py  geometry.py  imagemap.py  textures.py  viewer.py
sage_apt/assets/: editor.html
sage_asset/: README.md  __init__.py  __main__.py  assetdat.py  builder.py  sage-asset.spec
sage_asset/ui/: __init__.py  __main__.py  app.py  window.py
sage_cah/: README.md  __init__.py  __main__.py  cah.py
sage_edain/: README.md  __init__.py  __main__.py  diff.py  graph.py  profile.py  replay.py  report.py  schema.py  server.py  skill_install.py
sage_edain/map_checks/: __init__.py  __main__.py
sage_edain/ui/: app.js  index.html
sage_ini/: README.md  __init__.py  __main__.py  brief.py  diff.py  loader.py  macro_merge.py  manifest.py  merge.py  modindex.py  player_diff.py  primer.py  sage-ini.spec  skill_install.py  stats.py  strings.py  subsystems.py  suggest.py  walk.py
sage_ini/model/: behaviors.py  data_blocks.py  enums.py  fxlist.py  game.py  ini_objects.py  livingworld.py  misc_blocks.py  nuggets.py  objects.py  particles.py  state.py  types.py  xref.py
sage_ini/parser/: blockparser.py  diagnostics.py  io.py  keywords.py  lexer.py  printer.py
sage_lint/: .sagelint.template  README.md  baseline.py  cli.py  config.py  duplicates.py  fixer.py  formatter.py  linter.py  ruleconfig.py  sage-lint-cli.spec  sage-lint-ui.spec  sage-lint.spec  suppressions.py
sage_lint/commands/: __init__.py  common.py  diff.py  duplicates.py  format.py  init.py  lint.py  manifest.py  serve.py
sage_lint/rules/: __init__.py  asset_dat.py  assets.py  base.py  commandset.py  definitions.py  macros.py  map_ini.py  modifier_fx.py  module_ops.py  module_refs.py  modules.py  references.py  respawn.py  schema.py  strings.py
sage_map/: README.md  __init__.py  __main__.py  context.py  diff.py  linter.py  map.py  model.py  properties.py  sage-map.spec  scb.py  scripts.py
sage_map/assets/: __init__.py  asset_list.py  blend_tile_data.py  camera_animation_list.py  castle_templates.py  environment_data.py  global_lighting.py  height_map.py  named_cameras.py  player_scripts.py  polygon_triggers.py  post_effects_chunk.py  river_areas.py  script_import_size.py  script_teams.py  scripts_players.py  sides_list.py  skipped_asset.py  standing_water_area.py  standing_waves_area.py  teams.py  waypoint_list.py
sage_map/checks/: __init__.py  height_utils.py  linter.py
sage_mods/: __init__.py
sage_mods/edain/: README.md  __init__.py  __main__.py  assets.py  report.py  sage-edain-lint.spec  sage-edain.spec  schema.py  server.py  skill_install.py
sage_replay/: README.md  __init__.py  __main__.py  aggregate.py  build_orders.py  cache.py  coverage.py  heroes.py  ids.py  narrate.py  order_space_map.md  replay.py  retarget.py  sage-replay.spec  serialize.py  sidecar.py  stats.py  translated.py  winner.py
sage_save/: README.md  __init__.py  __main__.py  chunks.py  coverage.py  diagnose.py  edit.py  export.py  players.py  reversing.py  sage-save.spec  save.py  serialize.py  xfer.py  xref.py
sage_ui/: README.md  app.py  browser.py  extract.py  object_browser.py  registry.py  sage-ui.spec  unit_panel.py
sage_utils/: README.md  __init__.py  cli.py  clock.py  extras.py  findings.py  gameroot.py  refpack.py  skill.py  sources.py  stream.py  styles.py  textures.py  views.py  widgets.py
sage_utils/factiongraph/: __init__.py  bases.py  graph.py  model.py  powers.py  profile.py
sage_utils/views/: __init__.py  base.py  buttons.py  factions.py  objects.py  powers.py  text.py  weapons.py
sage_w3d/: README.md  __init__.py  __main__.py  adaptive_delta.py  animation.py  binary.py  chunks.py  compressed_animation.py  hierarchy.py  hlod.py  mesh.py  objects.py  w3d.py
sage_w3d/render/: __init__.py  math3d.py  pose.py  scene.py  textures.py  viewport.py
sage_wiki/: README.md  app.py  archetypes.py  credentials.py  diff.py  images.py  infobox.py  launcher.py  links.py  mapping.py  meta.py  pagegen.py  sage-wiki.spec  versions.py  weapons.py
sage_wiki/cards/: __init__.py  category_card.py  diff_card.py  images_card.py  pagegen_card.py  tools_card.py
sage_wiki/wiki/: client.py
tests/: conftest.py  test_brief.py  test_config.py  test_daemon.py  test_diff.py  test_links.py  test_merge.py  test_modindex.py  test_packaging.py  test_pagegen.py  test_rules.py  test_sage_edain.py  test_sage_lint.py  test_sage_utils.py  test_skill_install.py
tests/sage_apt/: test_actions.py  test_aptfile.py  test_bigsource.py  test_corpus.py  test_editing.py  test_editor.py  test_geometry.py  test_golden.py  test_imagemap.py  test_textures.py  test_viewer_frames.py
tests/sage_asset/: test_assetdat.py  test_builder.py  test_cli.py  test_full_assetdats.py  test_ui.py
tests/sage_cah/: test_cah.py  test_cli.py  test_full_cahs.py
tests/sage_edain/: test_map_checks.py  test_replay.py  test_sage_edain.py
tests/sage_ini/: test_blockparser.py  test_conversion.py  test_corpus.py  test_definitions.py  test_lexer.py  test_loader.py  test_macro_merge.py  test_manifest.py  test_merge.py  test_objects.py  test_primer.py  test_printer.py  test_sage_ini_cli.py  test_skill_install.py  test_state.py  test_subsystems.py  test_thing_ids.py  test_xref.py
tests/sage_lint/: test_config.py  (+7 more)
tools/: autofill_names.py  build_release.py  categorize_roots.py  conversion_errors.py  download_bfme_replays.py  missing_attributes.py  module_coverage.py  mount_game.py  opensage_field_diff.py  rebuild_aggregates.py  reference_audit.py  replay_idmap.py  replay_triage.py  scan_block_keywords.py  string_field_audit.py  upload_aggregates.py
(+220 files in other folders)
