[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pysage"
version = "0.1.0"
description = "Python tools for the data formats of the SAGE engine (Battle for Middle-earth): ini game data, binary maps, replays, and UI movies."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Clement Julia", email = "clement.julia13@gmail.com" },
]
keywords = ["sage", "bfme", "ini", "parser", "linter", "map", "replay", "modding"]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Games/Entertainment",
]
dependencies = []

[project.urls]
Repository = "https://github.com/ClementJ18/ini_parser"

[project.scripts]
sage-lint = "sage_lint.cli:main"
sage-ini = "sage_ini.__main__:main"
sage-edain = "sage_mods.edain.__main__:main"
sage-replay = "sage_replay.__main__:main"
sage-apt = "sage_apt.__main__:main"
sage-save = "sage_save.__main__:main"

# Desktop apps; each needs its extra installed (ui / wiki / lint-ui / edain-ui).
[project.gui-scripts]
sage-ui = "sage_ui.app:main"
sage-wiki = "sage_wiki.app:main"
sage-lint-ui = "sage_lint.plugins.ui.app:main"
sage-edain-lint = "sage_mods.edain.map_checks.ui.app:main"

[project.optional-dependencies]
ui = [
    "PyQt6>=6.6",
    "pybig>=0.6",
    "pillow>=10",
    "reversebox>=0.84",  # refpack decompression for sage_map's binary .map/.bse layer
]

lint-ui = [
    "PyQt6>=6.6",
]

wiki = [
    "mwclient>=0.11", 
    "mwparserfromhell>=0.7", 
    "PyQt6>=6.6", 
    "pybig>=0.6",
    "keyring>=24",
]

map = [
    "reversebox>=0.84",
]

edain = [
    "reversebox>=0.84",
]

edain-ui = [
    "PyQt6>=6.6",
    "reversebox>=0.84",  # the binary .map layer the checks parse
]

apt = [
    "pybig>=0.6",  # reading a .const (or .apt) out of a .big archive; the core stays stdlib-only
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pyinstaller>=6",  # builds the desktop .exe bundles (the *.spec files); not a runtime dep
]

[tool.setuptools.packages.find]
include = ["sage_apt*", "sage_ini*", "sage_lint*", "sage_map*", "sage_replay*", "sage_save*", "sage_utils*", "sage_wiki*", "sage_ui*", "sage_mods*"]

[tool.setuptools.package-data]
sage_apt = ["assets/*.html", "py.typed"]
sage_ini = ["py.typed", "skill_assets/**/*"]
sage_map = ["py.typed"]
sage_save = ["py.typed"]
"sage_mods.edain" = ["ui/*", "skill_assets/**/*", "map_checks/ui/*.ico"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "full: part of the full suite (corpus gates + peripheral packages); run with --full",
]

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = [
    "data", # game-data corpus
]

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors (E722: no bare `except:`)
    "W",       # pycodestyle warnings
    "F",       # pyflakes
    "I",       # isort - deterministic import order
    "B",       # bugbear (B009/B010: no getattr/setattr with constant attribute names)
    "UP",      # pyupgrade
    "BLE",     # blind-except: no `except Exception:` swallowing
    "PLC0415", # all imports at module top level; no function-local imports
]

[tool.ruff.lint.per-file-ignores]
"sage_ini/model/behaviors.py" = ["F821"]
"sage_ini/model/nuggets.py" = ["F821"]
"sage_ini/model/data_blocks.py" = ["F821"]
# The embedded single-page HTML/CSS/JS template carries lines longer than the Python limit.
"sage_apt/viewer.py" = ["E501"]
"sage_replay/aggregate.py" = ["E501"]

[tool.ruff.format]

[tool.mypy]
python_version = "3.13"
files = ["sage_apt", "sage_ini", "sage_map", "sage_mods", "sage_replay", "sage_save", "sage_utils"]
disable_error_code = ["annotation-unchecked"]

[[tool.mypy.overrides]]
module = ["reversebox.*", "PyQt6.*", "pyBIG.*", "PIL.*"]
ignore_missing_imports = true

# The Qt half of sage_utils (and the texture/source layer built on optional deps) is outside
# the type-checked set: it needs the [ui] extras installed and predates annotations. The
# Qt-free helpers (config, views, skill, cli) are checked like the core packages.
[[tool.mypy.overrides]]
module = [
    "sage_utils.widgets",
    "sage_utils.styles",
    "sage_utils.textures",
    "sage_utils.sources",
    "sage_utils.findings",
]
ignore_errors = true

# Same for the Qt half of the Edain Linter window; its Qt-free runner stays checked.
[[tool.mypy.overrides]]
module = ["sage_mods.edain.map_checks.ui.window", "sage_mods.edain.map_checks.ui.app"]
ignore_errors = true

# sage_lint is a tool package, not in the type-checked `files` set. sage_mods.edain.map_checks imports
# its shared map-lint runner (add_map_lint_arguments / run_map_lint), which pulls sage_lint into
# reach: follow the import so sage_mods.edain still sees real types, but don't gate on sage_lint's own
# (pre-existing) errors here - it is checked on its own terms, not through this overlay.
[[tool.mypy.overrides]]
module = ["sage_lint.*"]
follow_imports = "silent"
