[build-system]
requires = ["setuptools>=77"]  # >=77 for the PEP 639 SPDX `license` field below
build-backend = "setuptools.build_meta"

[project]
name = "pysage-tools"
version = "0.2.0"
description = "Python tools for the data formats of the SAGE engine (Battle for Middle-earth): ini game data, binary maps, replays, and UI movies."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Clement Julia", email = "clement.julia13@gmail.com" },
]
keywords = ["sage", "bfme", "ini", "parser", "linter", "map", "replay", "modding"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Games/Entertainment",
]
dependencies = [
    # Native RefPack compressor for map saving (`sage_utils.refpack`). reversebox ships a
    # Windows-only DLL, so the marker installs it exactly where it can load; every other
    # platform resolves to no dependencies at all and uses the pure-Python compressor.
    "reversebox>=0.84; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/ClementJ18/pySAGE"
Repository = "https://github.com/ClementJ18/pySAGE"
Issues = "https://github.com/ClementJ18/pySAGE/issues"

[project.scripts]
sage-lint = "sage_lint.cli:main"
sage-ini = "sage_ini.__main__:main"
sage-edain = "sage_mods.edain.__main__:main"
sage-replay = "sage_replay.__main__:main"
sage-apt = "sage_apt.__main__:main"
sage-save = "sage_save.__main__:main"
sage-map = "sage_map.__main__:main"
sage-asset = "sage_asset.__main__:main"

# Desktop apps; each needs its extra installed (ui / wiki / lint-ui / edain-ui).
[project.gui-scripts]
sage-ui = "sage_ui.app:main"
sage-wiki = "sage_wiki.launcher:main"  # guards the [wiki] extra; app.py imports Qt at module scope
sage-lint-ui = "sage_lint.plugins.ui.app:main"
sage-edain-lint = "sage_mods.edain.map_checks.ui.app:main"
sage-asset-ui = "sage_asset.ui.app:main"

[project.optional-dependencies]
ui = [
    "PyQt6>=6.6",
    "pybig>=0.6",
    "pillow>=10",
]

lint-ui = [
    "PyQt6>=6.6",
]

wiki = [
    "mwclient>=0.11", 
    "mwparserfromhell>=0.7", 
    "PyQt6>=6.6", 
    "pybig>=0.6",
    "keyring>=24",
]

edain-ui = [
    "PyQt6>=6.6",
]

asset-ui = [
    "PyQt6>=6.6",
]

apt = [
    "pybig>=0.6",  # reading a .const (or .apt) out of a .big archive; the core stays stdlib-only
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pyinstaller>=6",  # builds the desktop .exe bundles (the *.spec files); not a runtime dep
]

[tool.setuptools.packages.find]
include = ["sage_apt*", "sage_asset*", "sage_ini*", "sage_lint*", "sage_map*", "sage_replay*", "sage_save*", "sage_utils*", "sage_wiki*", "sage_ui*", "sage_mods*"]

[tool.setuptools.package-data]
# Anything a package opens at runtime must be listed here, or it is absent from the wheel. The
# loaders degrade silently (a missing asset returns None), so an omission surfaces as a feature
# quietly not working rather than an error; tests/test_packaging.py asserts every runtime asset
# below is shipped.
sage_apt = ["assets/*.html", "py.typed"]
sage_asset = ["py.typed", "ui/*.ico"]
sage_ini = ["py.typed", "skill_assets/**/*"]
sage_map = ["py.typed"]
sage_save = ["py.typed"]
sage_replay = ["py.typed"]
sage_ui = ["*.ico"]
sage_wiki = ["*.ico"]
sage_utils = ["assets/*.png"]  # portrait background + overlays; sage_utils/textures.py
"sage_lint.plugins.ui" = ["*.ico"]
sage_mods = ["py.typed"]  # PEP 561 marker belongs on the top-level package, not sage_mods.edain
"sage_mods.edain" = [
    "ui/*",
    "skill_assets/**/*",
    "map_checks/ui/*.ico",
    "icons/*.webp",  # faction emblems; the public ICONS_DIR / FACTION_ICONS in edain/replay.py
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "full: part of the full suite (corpus gates + peripheral packages); run with --full",
]

[tool.ruff]
target-version = "py312"  # matches requires-python, so pyupgrade cannot suggest 3.13-only syntax
line-length = 100
extend-exclude = [
    "data", # game-data corpus
]

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors (E722: no bare `except:`)
    "W",       # pycodestyle warnings
    "F",       # pyflakes
    "I",       # isort - deterministic import order
    "B",       # bugbear (B009/B010: no getattr/setattr with constant attribute names)
    "UP",      # pyupgrade
    "BLE",     # blind-except: no `except Exception:` swallowing
    "PLC0415", # all imports at module top level; no function-local imports
]

[tool.ruff.lint.per-file-ignores]
"sage_ini/model/behaviors.py" = ["F821"]
"sage_ini/model/nuggets.py" = ["F821"]
"sage_ini/model/data_blocks.py" = ["F821"]
# The embedded single-page HTML/CSS/JS template carries lines longer than the Python limit.
"sage_apt/viewer.py" = ["E501"]
"sage_replay/aggregate.py" = ["E501"]

[tool.ruff.format]

[tool.mypy]
python_version = "3.12"  # matches requires-python: catch 3.13-only API use on the lowest floor
files = ["sage_apt", "sage_asset", "sage_ini", "sage_map", "sage_mods", "sage_replay", "sage_save", "sage_utils"]
disable_error_code = ["annotation-unchecked"]

[[tool.mypy.overrides]]
module = ["reversebox.*", "PyQt6.*", "pyBIG.*", "PIL.*"]
ignore_missing_imports = true

# The Qt half of sage_utils (and the texture/source layer built on optional deps) is outside
# the type-checked set: it needs the [ui] extras installed and predates annotations. The
# Qt-free helpers (config, views, skill, cli) are checked like the core packages.
[[tool.mypy.overrides]]
module = [
    "sage_utils.widgets",
    "sage_utils.styles",
    "sage_utils.textures",
    "sage_utils.sources",
    "sage_utils.findings",
]
ignore_errors = true

# Same for the Qt half of the Edain Linter window; its Qt-free runner stays checked.
[[tool.mypy.overrides]]
module = ["sage_mods.edain.map_checks.ui.window", "sage_mods.edain.map_checks.ui.app"]
ignore_errors = true

# sage_lint is a tool package, not in the type-checked `files` set. sage_mods.edain.map_checks imports
# its shared map-lint runner (add_map_lint_arguments / run_map_lint), which pulls sage_lint into
# reach: follow the import so sage_mods.edain still sees real types, but don't gate on sage_lint's own
# (pre-existing) errors here - it is checked on its own terms, not through this overlay.
[[tool.mypy.overrides]]
module = ["sage_lint.*"]
follow_imports = "silent"
